k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: my-python-app
        image: oyedemilade/mypython-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:   # Update Image Pull Secret Name we creted
        - name: dterraform-secret
# To schedule pods on based on NodeSelectors
      nodeSelector:
        app: system-apps
