cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: learn-devops-clusterip-service
  labels:
    app: python-app
spec:
  type: ClusterIP
  selector:
    app: learn-devops2
  ports:
    - port: 8080
      targetPort: 8080
